# HLP

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: hlp.h
src/: hlp.c
tests/: test_hlp.c  test_main.c
